# ChiefOS

./: .gitignore  ChiefOS-PRD-v0.3.md  README.md
.github/workflows/: spinfusion-scrape.yml
app/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
app/public/: sw.js
app/public/icons/: README.md
app/src/: middleware.ts
app/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx
app/src/app/(auth)/: layout.tsx
app/src/app/case-requests/: CaseRequestFormDialog.tsx  CaseRequestRow.tsx  page.tsx
app/src/app/chat/: ChatClient.tsx  page.tsx
app/src/app/costs/: DailyBarChart.tsx  FixedCostsEditor.tsx  page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/meetings/: MeetingFormDialog.tsx  MeetingRow.tsx  page.tsx
app/src/app/offline/: page.tsx
app/src/app/todos/: NewTodoForm.tsx  TodoListClient.tsx  page.tsx
app/src/components/: MobileBottomNav.tsx  RegisterServiceWorker.tsx
app/src/components/dashboard/: CaseRequestsCard.tsx  (+11 more)
app/supabase/migrations/: 20260515220000_user_layout.sql  20260515221000_todos.sql  20260515222000_meetings.sql  20260515223000_cost_tracking.sql  20260516000000_cost_thresholds.sql  20260516120000_layout_collapsed.sql  20260516140000_vault_rag.sql  20260517090000_spinfusion_assignments.sql  20260519220000_case_requests.sql  20260519230000_case_requests_provider_names.sql
workers/spinfusion-scraper/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
workers/spinfusion-scraper/app/: inspect.py  main.py  scraper.py  supabase_client.py
(+43 files in other folders)
